Update Partnership Options

--- a/index.html
+++ b/index.html
@@ -154,6 +154,26 @@
         <select id="about_partnership">
             <option value="">Select...</option>
             <option value="21CSLA Teacher Leader Community of Practice">21CSLA Teacher Leader Community of Practice</option>
+            <option value="21CSLA Librarian Community of Practice">21CSLA Librarian Community of Practice</option>
+            <option value="Alameda Unified School District">Alameda Unified School District</option>
+            <option value="Cherrylee Elementary School">Cherrylee Elemenatry School</option>
+            <option value="De Anza High School">De Anza High School</option>
+            <option value="Dublin High School">Dublin High School</option>
+            <option value="Halkin Elementary School">Halkin Elementary School</option>
+            <option value="Hillcrest Elementary School">Hillcrest Elementary School</option>
+            <option value="Jefferson Elementary School">Jefferson Elementary School</option>
+            <option value="Madison Park Acamedy">Madison Park Academy</option>
+            <option value="Monroe Elementary School">Monroe Elementary School</option>
+            <option value="Oakland Unified Expanded Learning">Oakland Unified Expanded Learning</option>
+            <option value="Oakland Unified Librarian Leadership Team">Oakland Unified Librarian Leadership Team</option>
+            <option value="Oakland Unified Linked Learning">Oakland Unified Linked Learning</option>
+            <option value="Oakland Unified SEL">Oakland Unified SEL</option>
+            <option value="San Francisco Public Schools">San Francisco Public Schools</option>
+            <option value="SPG Therapy">SPG Therapy</option>
+            <option value="Tamalpais Union High School District">Tamalpais Union High School District</option>
+            <option value="Tomales High School">Tomales High School</option>
+            <option value="United for Success Academy">United for Success Academy</option>
+            <option value="Vallejo Unified Expanded Learning">Vallejo Unified Expanded Learning</option>
             <option value="Site-based Leadership Coaching">Site-Based Leadership Coaching</option>
             <option value="District/Network Partnership">District/Network Partnership</option>
             <option value="Other">Other</option>
